--- a/package.json
+++ b/package.json
@@ -46,27 +46,22 @@
     "migrate:make": "knex migrate:make"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^5.0.28",
-    "@feathersjs/authentication": "^5.0.28",
-    "@feathersjs/authentication-client": "^5.0.28",
-    "@feathersjs/authentication-local": "^5.0.28",
-    "@feathersjs/authentication-oauth": "^5.0.28",
-    "@feathersjs/configuration": "^5.0.28",
-    "@feathersjs/errors": "^5.0.28",
-    "@feathersjs/express": "^5.0.31",
-    "@feathersjs/feathers": "^5.0.28",
-    "@feathersjs/knex": "^5.0.28",
-    "@feathersjs/schema": "^5.0.28",
-    "@feathersjs/socketio": "^5.0.28",
-    "@feathersjs/transport-commons": "^5.0.28",
-    "@feathersjs/typebox": "^5.0.28",
-    "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "@feathersjs/adapter-commons": "^4.5.17",
+    "@feathersjs/authentication": "^4.5.18",
+    "@feathersjs/authentication-client": "^4.5.18",
+    "@feathersjs/authentication-local": "^4.5.18",
+    "@feathersjs/authentication-oauth": "^4.5.18",
+    "@feathersjs/configuration": "^4.5.17",
+    "@feathersjs/errors": "^4.5.17",
+    "@feathersjs/express": "^4.5.18",
+    "@feathersjs/feathers": "^4.5.17",
+    "@feathersjs/socketio": "^4.5.18",
+    "@feathersjs/transport-commons": "^4.5.18",
+    "cors": "^2.8.5",
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "@feathersjs/cli": "^5.0.28",
-    "@feathersjs/rest-client": "^5.0.28",
+    "@types/cors": "^2.8.17",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.10",
     "axios": "^1.7.2",
